--- a/public/cardpool.html
+++ b/public/cardpool.html
@@ -186,6 +186,7 @@
     <script src="js/angular.min.js"></script>
     <script src="js/angular-route.min.js"></script>
     <script src="js/angular-ui-router.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
     <script src="js/dataservice.js"></script>
     <!-- <script src="js/userdataservice.js"></script> -->
     <script src="https://www.paypalobjects.com/api/checkout.js" data-version-4></script>
